syntax = "proto3";

package go.micro.srv.flag;

service Flag {
	rpc Create(CreateRequest) returns (CreateResponse) {}
	rpc Read(ReadRequest) returns (ReadResponse) {}
	rpc Flip(FlipRequest) returns (FlipResponse) {}
	rpc Delete(DeleteRequest) returns (DeleteResponse) {}
	rpc List(ListRequest) returns (ListResponse) {}
}

message CreateRequest {
	string key = 1;
	string description = 2;
	bool value = 3;
}

message CreateResponse {

}

message ReadRequest {
  string key = 1;
}

message ReadResponse {
	string key = 1;
	string description = 2;
	bool value = 3;
}

message FlipRequest {
  string key = 1;
}

message FlipResponse {

}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {

}

message ListRequest {

}

message ListResponse {
  repeated ReadResponse result = 1;
}
